<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome_start_fragment">Welcome to the Games Rating app!</string>
    <string name="click_start_info">Click START to start rating :)</string>
    <string name="start">START</string>

    <string name="welcome_rating_fragment">Rate the following game from 1 to 5 stars!</string>
    <string name="to_summary">TO SUMMARY</string>

    <string name="start_over">Start over</string>
</resources>